--- a/src/main/resources/templates/ai/ai-add.html
+++ b/src/main/resources/templates/ai/ai-add.html
@@ -6,11 +6,14 @@
     <title>GachProject</title>
 </head>
 <body>
-<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcwEaZi-gI454I_SqL0EwZuZXtOS0ryLU&callback=initMap&libraries=maps,marker&v=beta"></script>
 <div class="container-fluid">
-    <div class="d-flex justify-content-center" style="position: absolute; top:50%; left:50%;">
-        <div class="spinner-border" role="status" id="spin" style="display:none;">
-            <span class="visually-hidden">Loading...</span>
+    <div class="d-flex justify-content-center" style="position: absolute; top:50%; left:50%; width:10rem; height:10rem;">
+        <div class="row justify-content-center">
+            <div class="spinner-border" role="status" id="spin" style="display:none; width:4rem; height:4rem;">
+            </div>
+            <div class="row fs-1 text-center fontHv" id="comment" style="display : none;">
+                학습중
+            </div>
         </div>
     </div>
     <header th:replace="~{/fragment :: header}"></header>
@@ -67,52 +70,89 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" id="second-step" style="opacity: 30%; cursor:not-allowed">
                     <div class="col-6 offset-2">
                         <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded text-center sidebarItem">
                             <div class="row align-items-center">
                                 <div class="form-floating mb-4">
-                                    <p class="fs-3 sidebarItem text-start ms-4">모델 생성하기</p>
+                                    <p class="fs-3 sidebarItem text-start ms-4">모델 학습 설정</p>
                                     <hr>
                                 </div>
                             </div>
-                            <div class="row mb-3">
-                                <div class="col fs-6 sidebarItem">
-                                    은닉층 개수
+                            <div class="row mt-3">
+                                <div class="col">
+                                        <p class="fs-5 nodeHeader text-start">은닉층 개수</p>
+                                        <hr>
+                                        <input type="text" class="form-control fontHv fs-6 second" id="hidden" disabled>
                                 </div>
                                 <div class="col">
-                                    <input type="text" class="form-control fontHv fs-6" id="hidden">
+                                        <p class="fs-5 nodeHeader text-start">층의 수</p>
+                                        <hr>
+                                        <input type="text" class="form-control fontHv fs-6 second" id="layer" disabled>
+                                </div>
+                                <div class="col">
+                                        <p class="fs-5 nodeHeader text-start">에포크 수</p>
+                                        <hr>
+                                        <input type="text" class="form-control fontHv fs-6 second" id="epochs" disabled>
                                 </div>
                             </div>
-                            <div class="row mb-3">
-                                <div class="col fs-6 sidebarItem">
-                                    epochs 수
+                            <div class="row mt-3">
+                                <div class="col">
+                                        <p class="fs-5 nodeHeader text-start">학습률</p>
+                                        <hr>
+                                        <input type="text" class="form-control fontHv fs-6 second" id="rate" disabled>
                                 </div>
                                 <div class="col">
-                                    <input type="text" class="form-control fontHv fs-6" id="epochs">
+                                        <p class="fs-5 nodeHeader text-start">배치 사이즈</p>
+                                        <hr>
+                                        <input type="text" class="form-control fontHv fs-6 second" id="batch" disabled>
                                 </div>
                             </div>
-                            <div class="row mb-3">
-                                <div class="col fs-6 sidebarItem">
-                                    Layer 수
-                                </div>
+                            <div class="row mt-3">
                                 <div class="col">
-                                    <input type="text" class="form-control fontHv fs-6" id="Layers">
+                                    <button class="btn btn-primary" id="doModelButton" onclick="doModel()" style="cursor: not-allowed">모델 학습</button>
                                 </div>
                             </div>
-                            <div class="row mb-3">
-                                <div class="col fs-6 sidebarItem">
-                                    학습률
-                                </div>
-                                <div class="col">
-                                    <input type="text" class="form-control fontHv fs-6" id="learning_rate">
-                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-xl">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5 sidebarItem" id="exampleModalLabel">모델 학습 결과</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
-                            <div class="row mb-5">
-                                <div class="col">
-                                    <a class="btn btn-primary" onclick="doModel()" id="temp">
-                                        모델 학습
-                                    </a>
+                            <div class="modal-body">
+                                <div class="row">
+                                    <div class="col-8" style="height:45vh">
+                                        <canvas id="chart" style="width:100%;"></canvas>
+                                    </div>
+                                    <div class="col-4 border-start">
+                                        <div class="row">
+                                            <div class="col">
+                                                <p class="fs-5 nodeHeader text-start">모델 이름</p>
+                                                <hr>
+                                                <input type="text" class="form-control fontHv fs-6 second" id="modelName">
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col">
+                                                <p class="fs-5 nodeHeader text-start">모델 버전</p>
+                                                <hr>
+                                                <input type="text" class="form-control fontHv fs-6 second" id="modelVersion">
+                                                <input type="hidden" class="form-control fontHv fs-6 second" id="mae">
+                                            </div>
+                                        </div>
+                                        <div class="row mt-5 justify-content-center">
+                                            <div class="col-5">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">다시 학습</button>
+                                            </div>
+                                            <div class="col-5">
+                                                <button type="button" class="btn btn-primary" onclick="saveModel()" data-bs-dismiss="modal">모델 저장</button>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -125,16 +165,28 @@
 <script th:replace="fragment::search"></script>
 <script>
 
+    const myModal = new bootstrap.Modal(document.getElementById('exampleModal'));
+
     function doFilter(){
 
         let min = document.getElementById("min").value;
         let max = document.getElementById("max").value;
 
-        fetch(`http://localhost:60002/admin/ai/model/add/filter/${min}/${max}`) // 데이터를 받아올 URL
+        let url = `http://ceprj.gachon.ac.kr:60002/admin/ai/model/add/filter/${min}/${max}`;
+        let localUrl = 'http://localhost:60002/admin/ai/model/add/filter/${min}/${max}';
+
+        fetch(url) // 데이터를 받아올 URL
             .then(response => response.json()) // JSON 형식으로 응답을 파싱
             .then(data => {
                 const result = parseInt(data);
                 document.getElementById("filterLength").innerText = result;
+                document.getElementById("second-step").style.opacity = '100%';
+                document.getElementById("second-step").style.cursor = 'auto';
+                document.getElementById("doModelButton").style.cursor = 'pointer';
+                let secondInputs = document.querySelectorAll('input.second');
+                secondInputs.forEach(function(input) {
+                    input.removeAttribute('disabled');
+                });
             })
             .catch(error => {
                 // 에러 처리
@@ -143,24 +195,92 @@
     }
 
     function doModel(){
-        document.getElementById("main").style.display = "none";
+        document.getElementById("main").style.opacity = "20%";
         document.getElementById("spin").style.display = "block";
-        let rate = document.getElementById("learning_rate").value;
+        document.getElementById("comment").style.display = "block";
+        let rate = document.getElementById("rate").value;
         let epoch = document.getElementById("epochs").value;
-        let layer = document.getElementById("Layers").value;
+        let layer = document.getElementById("layer").value;
         let hidden = document.getElementById("hidden").value;
+        let batch = document.getElementById("batch").value;
 
-        fetch(`http://localhost:60002/admin/ai/model/add/${hidden}/${epoch}/${rate}/${layer}`) // 데이터를 받아올 URL
-            .then(response => response.json()) // JSON 형식으로 응답을 파싱
+        let localUrl = `http://localhost:60002/admin/ai/model/add/${hidden}/${epoch}/${rate}/${layer}/${batch}`;
+        let url = `http://ceprj.gachon.ac.kr:60002/admin/ai/model/add/${hidden}/${epoch}/${rate}/${layer}/${batch}`;
+
+        let epochs = [];
+        let validationLosses = [];
+        const ctx = document.getElementById('chart');
+        let chartStatus = Chart.getChart(ctx);
+        if (chartStatus !== undefined) {
+            chartStatus.destroy();
+        }
+        fetch(url) // 데이터를 받아올 URL
+            .then(response => response.text()) // JSON 형식으로 응답을 파싱
             .then(data => {
                 document.getElementById("spin").style.display = "none";
-                document.getElementById("main").style.display = "flex";
-                document.getElementById("temp").innerText = "학습 완료";
-                document.getElementById("filterLength").innerText = data;
+                document.getElementById("main").style.opacity = "100%";
+                document.getElementById("comment").style.display = 'none';
+                document.getElementById("doModelButton").innerText = "학습 완료";
+
+                let dataArray = data.split(",");
+                dataArray.forEach(function(data, index) {
+                    // 공백을 기준으로 데이터 분할
+                    let parts = data.split(" ");
+
+                    if (index === dataArray.length - 1) {
+                        document.getElementById("mae").value = parseFloat(parts[0]);
+                    } else {
+                        epochs.push(parseInt(parts[0]));
+                        validationLosses.push(parseFloat(parts[1]));
+                    }
+                });
+                const chartData = {
+                    labels: epochs,
+                    datasets: [{
+                        label: 'Validation Loss',
+                        data: validationLosses
+                    }]
+                };
+                new Chart(ctx, {
+                    type: 'line',
+                    data : chartData,
+                    options : {
+                        plugins : {
+                            legend:false
+                        }
+                    }
+                });
+                myModal.show(myModal);
             })
             .catch(error => {
-                // 에러 처리
                 console.error('Error fetching data:', error);
+            });
+    }
+
+    function saveModel(){
+        let localUrl = 'http://localhost:60002/admin/ai/model/add';
+        let url = 'http://ceprj.gachon.ac.kr:60002/admin/ai/model/add';
+        fetch(url, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                modelName: document.getElementById("modelName").value,
+                modelMae : document.getElementById("mae").value,
+                modelVersion : document.getElementById("modelVersion").value,
+                modelEpochs : document.getElementById("epochs").value,
+                modelBatch : document.getElementById("batch").value,
+                modelHidden : document.getElementById("hidden").value,
+                modelLayer : document.getElementById("layer").value,
+                modelLearning : document.getElementById("rate").value
+            }),
+        })
+            .then(data => {
+                window.location.href="/admin/ai"
+            })
+            .catch(error => {
+                console.error('There was a problem with your fetch operation:', error);
             });
     }
 </script>
