AI 재학습 기능 완 모델 선택 기능만 남았음

--- a/src/main/resources/templates/ai/ai-detail.html
+++ b/src/main/resources/templates/ai/ai-detail.html
@@ -55,7 +55,7 @@
               <div class="row mb-3 mt-4">
                 <div class="col">
                   <div class="">총 학습된 데이터 개수</div>
-                  <div class="fs-3 fontHv" th:text="${aiModel.getNumLayer()}">224</div>
+                  <div class="fs-3 fontHv" th:text="${aiModel.getDataLength()}">224</div>
                 </div>
                 <div class="col">
                   <div>현재 평균 만족도</div>
