--- a/src/main/resources/templates/ai/ai-manage.html
+++ b/src/main/resources/templates/ai/ai-manage.html
@@ -80,7 +80,8 @@
                                 <td>
                                     <div class="row justify-content-center">
                                        <div class="col-3">
-                                           <i class="bi bi-gear-fill"></i>
+                                           <i class="bi bi-gear-fill"
+                                              th:onclick="|location.href='@{/admin/ai/{modelId}(modelId=${ai.getAiModelId()})}'|"></i>
                                        </div>
                                         <div class="col-3">
                                             <i class="bi bi-trash-fill"></i>
