AI 재학습 기능 완 모델 선택 기능만 남았음

--- a/src/main/resources/templates/ai/ai-manage.html
+++ b/src/main/resources/templates/ai/ai-manage.html
@@ -81,7 +81,7 @@
                                     <div class="row justify-content-center">
                                        <div class="col-3">
                                            <i class="bi bi-gear-fill"
-                                              th:onclick="|location.href='@{/admin/ai/{modelId}(modelId=${ai.getAiModelId()})}'|"></i>
+                                              th:onclick="|location.href='@{/admin/ai/model/{modelId}(modelId=${ai.getAiModelId()})}'|"></i>
                                        </div>
                                         <div class="col-3">
                                             <i class="bi bi-trash-fill"></i>
