--- a/src/main/resources/templates/ai/ai-manage.html
+++ b/src/main/resources/templates/ai/ai-manage.html
@@ -84,7 +84,8 @@
                                               th:onclick="|location.href='@{/admin/ai/model/{modelId}(modelId=${ai.getAiModelId()})}'|"></i>
                                        </div>
                                         <div class="col-3">
-                                            <i class="bi bi-trash-fill"></i>
+                                            <i class="bi bi-trash-fill"
+                                               th:onclick="|location.href='@{/admin/ai/delete/model/{modelId}(modelId=${ai.getAiModelId()})}'|"></i>
                                         </div>
                                     </div>
                                 </td>
