--- a/src/main/resources/templates/ai/ai-manage.html
+++ b/src/main/resources/templates/ai/ai-manage.html
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <div class="row p-5">
-                    <table class="table table-hover text-center rounded pt-2 fontReg align-middle">
+                    <table class="table text-center rounded pt-2 fontReg align-middle">
                         <thead style="position : sticky; top:0;">
                         <tr class="fs-5">
                             <th scope="col">
@@ -50,7 +50,12 @@
                         </thead>
                         <tbody>
                             <tr style="height:8vh" th:each="ai : ${aiList}">
-                                <td th:text="${ai.getAiModelVersion()}">v0.0.1</td>
+                                <td>
+                                    <div th:text="${ai.getAiModelVersion()}">v0.0.1</div>
+                                    <div th:if="${ai.getAiModelId() eq selectedAiModelId}">
+                                        <span class="badge rounded-pill text-bg-success">사용중</span>
+                                    </div>
+                                </td>
                                 <td th:text="${ai.getAiModelName()}">초기 모델</td>
                                 <td th:text="${ai.getMae()}">15%</td>
                                 <td th:text="${ai.getAverSatis()}">3.2</td>
